Prima versione della storia infinita di una Pornostar P_P

--- a/Versione2/analyzer/general.conf
+++ b/Versione2/analyzer/general.conf
@@ -23,9 +23,9 @@ icmp
 end_icmp
 
 ipv4 
-	run noprint 
-	filt 10.14.230.223 32 0.0.0.0 0 
-	filt 0.0.0.0 0 10.14.230.223 32
+	run print 
+	filt 10.10.10.119 32 0.0.0.0 0 
+	filt 0.0.0.0 0 10.10.10.119 32
 end_ipv4
 
 ipv6
@@ -44,7 +44,11 @@ udp
 end_udp
 
 http
-	run print
+	run noprint
 end_http
+
+ftp
+	run print
+end_ftp
 
 end
